# forti-connect

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml
.specify/: init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
specs/001-fix-cross-platform-issues/: plan.md  quickstart.md  spec.md  tasks.md
specs/001-fix-cross-platform-issues/contracts/: cli-commands.md
src/forti_connect/: __init__.py  cli.py  config.py  dns.py  otp.py  platform.py  vpn.py
tests/: conftest.py  test_cli.py  test_otp.py  test_vpn.py
