[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forti-connect"
version = "0.1.0"
description = "Automated FortiVPN reconnection with OTP retrieval from Outlook Web"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "theizekry"},
]
keywords = ["vpn", "fortivpn", "otp", "outlook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "pexpect>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
vpn = "forti_connect.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/forti_connect"]
